--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="global-background"></div>
 <div class="main-content">
 <app-header></app-header>
-<main>
+<main class="content">
   <router-outlet></router-outlet>
 </main>
 <app-footer> </app-footer>
+</div>
