--- a/src/app/admin/admin-product/admin-product.component.html
+++ b/src/app/admin/admin-product/admin-product.component.html
@@ -1,1 +1,80 @@
-<p>admin-product works!</p>
+<div class="container custom-ml">
+  <button class="btn-addCategory fs-4" (click)="add()">Додати продукти</button>
+
+  <div class="add-block" *ngIf="addBlock">
+    <form [formGroup]="productForm" (ngSubmit)="addProduct()">
+
+      <div class="mb-3">
+        <label  class="form-label fs-4">Виберіть категорію</label>
+        <select formControlName="category" class="form-select">
+          <option *ngFor="let category of adminProducts"></option>
+        </select>
+
+        <div class="d-flex justify-content-between">
+          <input class="mr-2" formControlName="name" type="text" name="name" placeholder="*Назва продукту">
+          <input class="mr-2" formControlName="path" type="text" name="path" placeholder="*Шлях">
+        </div>
+      </div>
+      <textarea class="description" formControlName="description" type="text" name="description"
+                placeholder="*Інгредієнти"></textarea>
+      <div class="d-flex justify-content-between">
+        <input class="mr-2" formControlName="weight" type="text" name="weight" placeholder="*Вага">
+        <input class="mr-2" formControlName="price" type="number" name="price" placeholder="*Ціна">
+      </div>
+
+      <ng-container *ngIf="!isUploaded">
+        <div class="mb-3">
+          <label for="formFile" class="form-label"></label>
+          <input class="form-control" type="file" id="formFile" (change)="upload($event)">
+        </div>
+        <div class="progress mb-3" role="progressbar" aria-label="Default striped example" aria-valuemin="0"
+             aria-valuemax="100">
+          <div class="progress-bar progress-bar-striped" [style.width.%]="uploadPercent"></div>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="isUploaded">
+        <div class="d-flex flex-column col-3">
+          <img [src]="valueByControl('imgPath')" class="m-3" alt="">
+          <button type="button" class="btn-danger m-3 p-2" (click)="deleteImg()">Delete</button>
+        </div>
+      </ng-container>
+
+      <div><button type="submit" [disabled]="productForm.invalid" class="btn-save fs-4">{{ editStatus ? 'Зберегти зміни': 'Зберегти' }}</button></div>
+
+    </form>
+  </div>
+
+  <table class="table fs-5 mr-0">
+    <thead>
+    <tr>
+      <th scope="col">№</th>
+      <th scope="col">Категорія</th>
+      <th scope="col">Назва</th>
+      <th scope="col">Шлях</th>
+      <th scope="col">Інгредієнти</th>
+      <th scope="col">Ціна</th>
+      <th scope="col">Картинка</th>
+      <th scope="col">Дії</th>
+    </tr>
+    </thead>
+    <tbody class="table-group-divider">
+    <tr *ngFor="let product of adminProducts; let i = index">
+      <th class="align-middle"></th>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle"></td>
+      <td class="align-middle">
+        <img>
+      </td>
+      <td class="align-middle text-center">
+        <button class="btn-action mb-1" (click)="editProduct()">Редагувати</button>
+        <button class="btn-action" (click)="deleteProduct()">Видалити</button>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
