--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,8 @@
+
 @import '../../shared/styles/variables';
 
 header {
-  position: relative;
+  position: fixed;
   z-index: 100;
 }
 
@@ -29,22 +30,51 @@ header {
 .navbar {
   position: relative;
   z-index: 10;
+  min-height: 80px;
+  display: flex;
+  align-items: center;
 }
 
 .navbar .nav-link {
-  color:#000;
+  color: #000;
   font-weight: 500;
+  display: flex;
+  align-items: center;
+  min-height: 50px;
 }
-
-//.navbar .nav-link.active {
-//  color: $primary;
-//}
 
 .navbar .nav-link:hover {
-color: $primary;
+  color: $primary;
 }
 
-.item{
+.item {
   text-transform: capitalize;
 }
 
+.user-actions {
+  display: flex;
+  align-items: center;
+}
+
+.user-auth {
+  min-width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+mat-icon {
+  color: black;
+  font-size: 24px;
+}
+
+.user-auth span {
+  white-space: nowrap;
+  font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    min-height: 60px; /* Для адаптації */
+  }
+}
