--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -202,24 +202,25 @@
   <div class="d-flex align-items-center form-block">
     <div class="contact-form">
       <h4>У тебе виникли запитання? Напиши нам!</h4>
-      <form [formGroup]="infoForm" class="info-form" [class.submitted]="submitted">
+      <form [formGroup]="infoForm" class="info-form">
         <div>
           <div class="d-flex">
-            <input formControlName="name" type="text" class="me3" placeholder="Ім'я">
-            <input formControlName="lastName" type="text" placeholder="Прізвище">
+            <input formControlName="name" type="text" class="me3 form-control"
+                   placeholder="Ім'я">
+            <input formControlName="lastName" type="text" class="form-control"
+                   placeholder="Прізвище">
           </div>
 
           <div class="d-flex">
-            <input formControlName="phone" type="tel" placeholder="+38 (xxx) xxx xx xx">
-            <input formControlName="email" type="email" placeholder="E-mail">
+            <input formControlName="phone" type="tel" class="form-control"
+                   placeholder="+38 (xxx) xxx xx xx">
+            <input formControlName="email" type="email" class="form-control"
+                   placeholder="E-mail">
           </div>
 
-          <textarea formControlName="message" class="message" placeholder="Повідомлення" name="textarea"></textarea>
-          <button type="submit" class="btn-contact"
-                  [disabled]="infoForm.invalid"
-                  (click)="sent()">
-            Надіслати
-          </button>
+          <textarea formControlName="message" class="message form-control"
+                    placeholder="Повідомлення"></textarea>
+          <button type="submit" class="btn btn-contact" (click)="sent()"> Надіслати </button>
         </div>
       </form>
     </div>
