--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -1,5 +1,5 @@
 @import '../../shared/styles/variables';
-
+@import '../../shared/styles/base';
 .container {
   color: #fff;
 }
@@ -61,7 +61,7 @@ h5 {
 }
 
 .contact-info {
-  flex: 1 1 calc(33.33% - 20px); /* Робить всі блоки однаковими */
+  flex: 1 1 calc(33.33% - 20px);
   min-width: 350px;
   max-width: 400px;
   display: flex;
@@ -94,40 +94,13 @@ h5 {
   font-weight: 500;
   margin: 20px auto;
   text-align: center;
-  border-radius: 6px;
-  color: white;
-  background: $primary;
-  border: 2px solid $primary;
-  transition: background 0.3s ease, color 0.3s ease, opacity 0.3s ease;
   cursor: pointer;
 }
-
-.btn-contact:hover {
-  background: transparent;
-  color: $primary;
-}
-
-.btn-contact[disabled] {
-  background: $primary !important;
-  color: white !important;
-  opacity: 1 !important;
-  border: 2px solid $primary !important;
-}
-
-.btn-contact[disabled]:hover {
-  background: transparent !important;
-  color: $primary !important;
-}
-
-
 
 input, .message {
   font-size: 16px;
   height: 54px;
   min-width: 300px;
-  color: #fff;
-  border: 1px solid $clr-border;
-  background-color: $clr-background;
   line-height: 51px;
   padding: 0 20px;
   border-radius: 6px;
@@ -137,32 +110,11 @@ input, .message {
 
 .message {
   height: 105px;
-  min-width: 635px;
-}
-
-::ng-deep input:focus,
-::ng-deep textarea:focus {
-  border: 1px solid $primary !important;
-  outline: none;
-
+  min-width: 630px;
 }
 
 .map-block img {
   margin-top: 30px;
   width: 100%;
   height: auto;
-
-}
-
-input.ng-invalid.ng-touched,
-textarea.ng-invalid.ng-touched,
-input.ng-invalid.submitted,
-textarea.ng-invalid.submitted {
-  border: 1px solid red !important;
-}
-
-/* Додаємо стиль для всіх інпутів, якщо форма позначена як submitted */
-.submitted input.ng-invalid,
-.submitted textarea.ng-invalid {
-  border: 1px solid red !important;
 }
