add category and product

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -10,10 +10,10 @@
         <h2>Основні страви азійської кухні — що оберете сьогодні?</h2>
         <p>Шеф-кухарі NOA ретельно збирали найкращі рецепти китайської, японської, тайської кухні. Для того, щоб ви могли смакувати улюбленими азійськими стравами у себе вдома: тоді, коли забажаєте. У нас є все для смачного обіду, ситної вечері або великого застілля з друзями:</p>
         <ul>
-          <li><a class="link">Суші</a> та <a class="link">роли</a> — за традиційними та авторськими рецептами. Обов’язково спробуйте рол Авокадо з вугрем, Токійський дракон, Акайо та Мідора — буде смачно!</li>
-          <li><a class="link">Страви WOK</a> — локшина та рис. З куркою, морепродуктами, овочами та смачними соусами, приготованими власноруч.</li>
-          <li><a class="link">Рамени</a> — найрізноманітніші та найсмачніші! З яловичиною, гьодзе, курятиною, свининою та морепродуктами. До речі, рамен — це зовсім не суп, а локшина з бульйоном. Спробуйте, і переконайтеся!</li>
-          <li><a class="link">Боули</a> — одночасно смачно та корисно. Вирішуйте, який боул хочете скуштувати сьогодні: з тунцем, лососем чи іншими смачними інгредієнтами.</li>
+          <li><a [routerLink]="['/product', 'sushiset']" class="link">Суші</a> та <a [routerLink]="['/product', 'rolls']" class="link">роли</a> — за традиційними та авторськими рецептами. Обов’язково спробуйте рол Авокадо з вугрем, Токійський дракон, Акайо та Мідора — буде смачно!</li>
+          <li><a [routerLink]="['/product', 'asianwok']" class="link">Страви WOK</a> — локшина та рис. З куркою, морепродуктами, овочами та смачними соусами, приготованими власноруч.</li>
+          <li><a [routerLink]="['/product', 'ramen']" class="link">Рамени</a> — найрізноманітніші та найсмачніші! З яловичиною, гьодзе, курятиною, свининою та морепродуктами. До речі, рамен — це зовсім не суп, а локшина з бульйоном. Спробуйте, і переконайтеся!</li>
+          <li><a [routerLink]="['/product', 'asian-bowls']" class="link">Боули</a> — одночасно смачно та корисно. Вирішуйте, який боул хочете скуштувати сьогодні: з тунцем, лососем чи іншими смачними інгредієнтами.</li>
         </ul>
         <p>Бажаєте поснідати з NOA? Жодних проблем! Наше меню сніданків доступне з 10 ранку і до 18 вечора — підійде навіть тим, хто звик прокидатися пообіді. Готуємо сирники, тости, омлети та хашбраун — вибирайте те, що вам до душі. .</p>
         <p>А ще, у нас є стартери, десерти, велике меню напоїв: усе, що потрібно для повноцінного обіду або вечері. Кожна страва створена з любов’ю. Адже ми готуємо страви для вас, як для своїх рідних. Турбуємося про те, щоб ви хотіли повертатися в “НОА” ще і ще, стали одним з наших постійних клієнтів.</p>
