--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,1 +1,167 @@
-<p>product works!</p>
+<div class="categories-container">
+  <div class="top-navigate" *ngFor="let category of userCategories">
+    <button class="btn btn-category"
+            [routerLink]="['/product/'+ category.path]"
+            routerLinkActive="active">
+      {{ category.name }}
+    </button>
+  </div>
+</div>
+
+<div class="cards-container mb-5">
+  <div class="card" *ngFor="let product of userProducts">
+    <img [src]="product.imgPath" class="card-img-top">
+    <div class="card-body">
+      <div class="card-title">
+        <h5>{{ product.name }}</h5>
+        <h5>{{ product.price }}</h5>
+      </div>
+      <p class="card-text">
+        {{ product.description | slice:0:118 }}
+        <span *ngIf="product.description.length > 118">...</span>
+      </p>
+    </div>
+
+    <div class="d-flex justify-content-around align-items-center">
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button class="btn-count" type="button" (click)="productCount(product, false)">-</button>
+        <input class="count" type="text" [value]="product.count">
+        <button class="btn-count" type="button" (click)="productCount(product, true)">+</button>
+      </div>
+      <button class="btn btn-order">Замовити</button>
+    </div>
+  </div>
+</div>
+
+<div class="textBlock mb-5">
+  <div *ngIf="categoryStates['snidanky']">
+  <h1>Доставка сніданків у Львові від NOA</h1>
+  <p>Який він — рецепт ідеального ранку? Прокинутися без будильника, посміхнутися рідним, приготувати ароматну каву. А
+    потім — замовити улюблений сніданок. Тому що сонячні години ранку зовсім не хочеться витрачати на приготування їжі.
+    В меню NOA на вас чекають сніданки, в які ви закохаєтеся з першого шматочка. Тост з лососем та авокадо, омурайсу чи
+    омлет з крабом — вирішувати лише вам. Про те, щоб сніданок був на столі вчасно, подбаємо ми.</p>
+  <h2>Починайте ранок смачно із доставкою сніданків від NOA</h2>
+  <p>Спільні сніданки — традиція чи не для кожної львівської родини. Спільна трапеза об’єднує: можна спілкуватися,
+    ділитися планами на день та налаштовуватися на продуктивну роботу. А ще, саме сніданок — найважливіше приймання їжі
+    за день. Дієтологи вважають, що він є найкращим способом наповнити організм енергією зранку. Правильний сніданок
+    робить нас бадьорими, допомагає прокинутися, покращує мозкову активність.<br>
+    Шеф-кухарі NOA знають всі секрети смачного сніданку. Ми обираємо кожен інгредієнт з любов’ю. Готуємо для вас, як для
+    своїх рідних. Адже мріємо, щоб ваш день починався приємно — зі смачної їжі та гарних емоцій. Якщо ви прокидаєтеся
+    пізно — це теж не проблема! Адже всі наші сніданки у Львові готуємо до 18:00.<br>
+
+    Багато людей відмовляються від сніданку, вважаючи, що це допоможе їм скинути зайві кілограми. Але насправді,
+    дієтологи не підтримують таку стратегію схуднення. Адже правильний сніданок працює зовсім навпаки: він запускає
+    нормальний метаболізм, що дозволяє організму більш ефективно боротися зі щоденними викликами.<br>
+
+    Важливо, щоб прийом їжі був збалансованим, ситним та здоровим. Поснідавши, ми маємо залишатися енергійними аж до
+    самісінького обіду. Це не так вже й легко в робочі будні. Тому правильні компоненти сніданку вкрай важливі.</p>
+
+</div>
+
+  <div *ngIf="categoryStates['starter']">
+    <h1>У свято чи будень: доставка стартерів у Львові з NOA</h1>
+    <p>Смачна їжа — це запорука гарного настрою. Проте іноді бувають дні, коли готувати зовсім не хочеться. Не примушуйте
+      себе: просто оберіть страви з меню NOA. У нас є не лише рамени та вок. А й смачні салати, закуски та стартери. Це
+      чудовий вибір для перекусу вдома або в офісі, вечірки з друзями, сімейних посиденьок. Ми розробили наше меню
+      стартерів для того, щоб кожен наш гість зміг обрати страви до душі та спробувати щось новеньке.</p>
+    <h2>Доставка стартерів, салатів та закусок з NOA — це:</h2>
+    <ul>
+      <li>Смачно — готуємо для вас, як для своїх рідних. Лише добірні інгредієнти та рецепти, вдосконалені нашими
+        шеф-кухарями.
+      </li>
+      <li>Різноманітно — обирайте страви, які подобаються саме вам. А ми подбаємо про те, щоб вибір завжди був
+        достатнім.
+      </li>
+      <li>Швидко — привеземо страви в зеленій зоні всього за 45 хвилин. Ви навіть не встигнете сильно зголодніти.</li>
+
+    </ul>
+  </div>
+
+
+  <div *ngIf="categoryStates['ramen']">
+    <h1>Рамен з доставкою у Львові від NOA</h1>
+    <p>Одна з найпопулярніших страв азійської кухні — це, звичайно ж, рамен. Бульйон, морепродукти, локшина, овочі та
+      спеції: таке поєднання нікого не залишає байдужим. Але приготувати рамен вдома — не так вже й просто. Потрібно
+      знайти правильний рецепт, придбати усі компоненти та знати безліч секретів. Тому у ситуації, коли стояти біля плити
+      не хочеться, а скуштувати пікантну страву ви усе ж мрієте, виручить доставка рамену у Львов. Шеф-кухарі NOA
+      приготують його для вас з любов’ю!<br>
+    <h2>Не просто суп. Що таке рамен з доставкою від NOA?</h2>
+    <p>Попри поширену думку, рамен — це не суп у традиційному розумінні. Сама назва “рамен” походить від двох китайських
+      ієрогліфів, які в японській мові читаються як “ра” та “мен”. “Ра” означає “витягувати”, а “мен” — локшина. Тому
+      рамен — це звичайна довга локшина. Але сервірують її в Азії з бульйоном, маринованими яйцями та овочами. Так і
+      отримуємо смачну страву під назвою рамен.</p>
+  </div>
+
+
+  <div *ngIf="categoryStates['asianwok']">
+    <h1>Смачна та пікантна локшина вок: доставка WOK у Львові</h1>
+    <p>Якби існував рейтинг найсмачніших страв азійської кухні, то їжа WOK увійшла б в трійку лідерів. Локшина або рис,
+      морепродукти, тофу, овочі, й усе це — зі злегка пікантним соусом. Встояти перед такою смакотою просто неможливо!
+      Тому не зволікайте: обирайте страви ВОК в меню NOA. А наші шеф-кухарі приготують їх спеціально для вас.</p>
+    <h2>Не лише локшина. Що таке страви WOK від NOA?</h2>
+    <p>Найчастіше ми звикли чути термін “локшина WOK”. Але ВОК — це не лише локшина. Це просто спосіб приготування страв
+      азійської кухні, який отримав назву від назви посуду. За своїми особливостями, сковорідка WOK, в якій готують
+      локшину, рис та інші страви, конусоподібна або округла. Вона дозволяє готувати їжу на високій температурі та з
+      задіюванням пари. Таким чином, страва отримує свій особливий смак.</p>
+  </div>
+
+  <div *ngIf="categoryStates['asianbowls']">
+    <h1>Замовити боули у Львові з доставкою від NOA</h1>
+    <p>Хочете скуштувати щось одночасно смачне, незвичайне й корисне? А, можливо, знайти не менш цікаву альтернативу суші
+      та WOK? Шеф-кухарі NOA знають, чим вас здивувати. У нашому меню є боули — мікс найсмачніших інгредієнтів, який
+      подарує справжній вибух смаків. Яскраві, свіжі, соковиті…все це можна сказати про наші боули! Тож обирайте страву до
+      смаку, додавайте її у кошик та забирайте боули у Львові прямісінько на порозі вашої квартири!</p>
+    <h2>Доставка боулів у Львові: Боули з ресторану азійської кухні</h2>
+    <p>
+      Боул у Львові — страва, яка поєднує в одній тарілці легку основу та більш ситні компоненти (м’ясо лосося, тунця або
+      курки). У якості гарніру використовуються, зазвичай:
+    </p>
+    <ul>
+      <li>салатний мікс;</li>
+      <li>рис;</li>
+      <li>кіноа;</li>
+      <li>суміш кіноа та рису.</li>
+    </ul>
+    <p> Додатковими компонентами боулу можуть бути різноманітні горіхи, авокадо, манго, креветки, сир, тофу, чері, огірок,
+      капуста, морква, кус-кус, фета, кукурудза, печериці, помідори, соус теріякі, начос, кунжут та багато іншого.
+      Варіюється і гострота страви: боул може бути як злегка пікантним, так і дуже гострим.</p>
+
+  </div>
+  <div *ngIf="categoryStates['napoyi']">
+    <h1>Швидко та смачно. Доставка напоїв у Львові з NOA</h1>
+    <p>Уявити собі сніданок, обід або вечерю без напоїв просто неможливо. Хтось полюбляє каву або чай, а хтось — мінеральну воду, пепсі та соки. Іноді для того, щоб придбати вдалий напій до суші, WOK чи салату, зовсім не хочеться йти в магазин. Тому ми вирішили, що доставка напоїв у Львові точно потрібна нашим гостям. З такою послугою ви економите власний час та сили.<br>
+      Обирайте страви та напої в меню NOA, та насолоджуйтеся. А ми подбаємо замовлення було біля ваших дверей вже через 45 хвилин!
+    </p>
+    <h2>Напої, які чудово доповнять ваш обід</h2>
+    <p>Вдало вибраний напій дозволяє не лише втамувати спрагу, а й підкреслити смак страв, відкрити його по-новому. Саме тому, в меню NOA на вас чекають найрізноманітніші напої: від звичайної негазованої води до авторських лимонадів, дбайливо приготованих нашими шеф-кухарями.</p>
+  </div>
+
+  <div *ngIf="categoryStates['rolls']">
+    <h1>Роли у Львові з доставкою</h1>
+    <p>Азійська кухня вражає різноманіттям смаків. Та найулюбленіша страва, перед якою неможливо встояти — це роли. Вони здатні подарувати не лише справжнє задоволення від смаку, а й підняти настрій навіть у найпохмуріший день. Свіжий лосось, злегка пікантний соус, ікра, авокадо — у кожній порції відчувається гармонія смаку. Роли з доставкою у Львові чекають на вас в ресторані NOA. Ми використовуємо добірні складники та знаємо секрети японської кухні, які роблять приготування ролів справжнім мистецтвом! Замовити доставку можна онлайн, а отримати страви — вже за 30-60 хвилин.</p>
+    <h2>Замовити роли з доставкою у Львові: лише якісні інгредієнти</h2>
+    <p>Щоб приготувати досконалий рол, насамперед варто подбати про добірні складники. Креветка, крем сир, сніжний краб, вугор, тунець, огірок, кунжут, ікра масаго, норі та різні види рису — всі ці складники ми використовуємо для приготування смачної страви. Окрім основних інгредієнтів, в арсеналі наших кухарів — великий асортимент соусів. Соус Унагі, Спайсі, горіховий, сирний, японський майонез — кожен з них підкреслює смак та аромат кожного шматочка ролів. І, звичайно ж, ми обов’язково подаємо роли з соєвим соусом, васабі та імбирем. Адже саме вони сприяють розкриттю смакових відтінків страви, дозволяючи насолоджуватися нею сповна.</p>
+  </div>
+
+  <div *ngIf="categoryStates['sushiset']">
+    <h1>Суші-сети у Львові з доставкою</h1>
+    <p>Вдома зібралась компанія друзів, плануєте застілля з родиною або романтичний вечір удвох? Замовити доставку суші-сетів у Львові з ресторану NOA — це чудова ідея. У нас ви знайдете всі улюблені види сетів — Філадельфія, Каліфорнія, макі з лососем та багато інших. А завдяки величезному розміру порцій, сетів вистачить усім вашим гостям!</p>
+    <h2>Доставка суші-сетів у Львові від NOA</h2>
+    <p>Якщо ви вирішили замовити суші-сет у Львові, то варто обрати сет саме від NOA. Ми не лише смачно готуємо, а й дбаємо про якість складників та прагнемо якомога швидше привезти ваше замовлення. Ціни також вас приємно здивують: маємо лояльний прайс.</p>
+  </div>
+
+  <div *ngIf="categoryStates['deserty']">
+    <h1>Хочеться смачненького? Доставка десертів у Львові з NOA</h1>
+    <p>Ніжний крем, шоколад, який просто тане в роті, фрукти та ягідна поливка — саме слово “десерт” асоціюється з чимось дуже приємним. Почувши його, одразу поринаєш в дитинство: часи, коли маленький шматочок чізкейка викликав справжнісіньке захоплення. Тепер, у шаленому ритмі буднів, ми часто забуваємо тішити себе смачненьким. А ще — вважаємо, що від солодощів варто повністю відмовитися, бо вони шкодять нашій фігурі. Та не варто бути таким суворим до себе. Нехай основу раціону складають “правильні” продукти. Але ми впевнені: у ньому варто іноді залишати місце для улюбленого десерту. Чудовий настрій гарантовано! <br>
+      Шеф-кухарі NOA створили для вас ідеальні смачні десерти у Львові. До прикладу, спробувавши наш баскський чізкейк, ви захочете замовляти його ще і ще. Чому? Зараз ми про це розкажемо!</p>
+    <h2>Доставка десертів у Львові: секрети приготування ідеального десерту в NOA</h2>
+    <p>Основа будь-якої страви — це якісні, ретельно підібрані компоненти. І десерт тут не став винятком. Ми працюємо лише з надійними постачальниками продукції. Саме тому, для приготування десертів використовуємо лише добірне борошно вищого гатунку, смачний та свіжий сир, якісний шоколад. Кожен компонент ми зберігаємо, чітко дотримуючись усіх вимог.</p>
+  </div>
+
+  <div *ngIf="categoryStates['sushiburgery']">
+    <h1>Оціни смачну новинку: суші бургери у Львові з доставкою</h1>
+    <p>Вважаєте, що куштували геть усі страви азійської кухні? Настав час замовити смачні суші-бургери у Львові! Це — смачний симбіоз двох кулінарних світів, який нікого не залишить байдужим. Не дивлячись на те, що така страва — доволі нова, вона вже стала популярною серед справжніх гурманів. З лососем чи тунцем, авокадо чи суші-сиром — азійські бургери смакують справді чудово. Тому не зволікайте: обирайте свій улюблений суші-бургер в меню ресторану NOA!</p>
+    <h2>Доставка десертів у Львові: секрети приготування ідеального десерту в NOA</h2>
+    <p>Основа будь-якої страви — це якісні, ретельно підібрані компоненти. І десерт тут не став винятком. Ми працюємо лише з надійними постачальниками продукції. Саме тому, для приготування десертів використовуємо лише добірне борошно вищого гатунку, смачний та свіжий сир, якісний шоколад. Кожен компонент ми зберігаємо, чітко дотримуючись усіх вимог.</p>
+  </div>
+</div>
