--- a/src/app/admin/admin-category/admin-category.component.html
+++ b/src/app/admin/admin-category/admin-category.component.html
@@ -4,7 +4,7 @@
   <div class="add-block" *ngIf="addBlock">
     <form [formGroup]="categoryForm" (ngSubmit)="addCategory()">
       <div class="d-flex flex-row justify-content-between">
-        <input formControlName="name" type="text" name="categoryName" placeholder="*Назва">
+        <input class="me-4" formControlName="name" type="text" name="categoryName" placeholder="*Назва">
         <input formControlName="path" type="text" name="categoryPath" placeholder="*Шлях">
 
       </div>
@@ -12,10 +12,6 @@
         <div class="mb-3">
           <label for="formFile" class="form-label"></label>
           <input class="form-control" type="file" id="formFile" (change)="upload($event)">
-        </div>
-        <div class="progress mb-3" role="progressbar" aria-label="Default striped example" aria-valuemin="0"
-             aria-valuemax="100">
-          <div class="progress-bar progress-bar-striped" [style.width.%]="uploadPercent"></div>
         </div>
       </ng-container>
       <ng-container *ngIf="isUploaded">
@@ -26,13 +22,16 @@
 
       </ng-container>
       <div>
-        <button class="btn-save fs-4" type="submit" [disabled]="categoryForm.invalid">{{ editStatus ? 'Зберегти зміни'
-          : 'Зберегти' }}</button>
+        <button class="btn-save fs-4" type="submit" [disabled]="categoryForm.invalid">{{
+            editStatus ? 'Зберегти зміни'
+              : 'Зберегти'
+          }}
+        </button>
       </div>
     </form>
   </div>
   <table class="table fs-5 text-center mr-0">
-    <thead>
+    <thead class="color">
     <tr>
       <th scope="col">№</th>
       <th scope="col">Назва</th>
@@ -43,14 +42,14 @@
     </thead>
     <tbody class="table-group-divider">
     <tr *ngFor="let category of adminCategories">
-      <th scope="row" class="align-middle"></th>
-      <td class="align-middle"></td>
-      <td class="align-middle"></td>
-      <td class="align-middle"></td>
+      <td>{{ category.id }}</td>
+      <td class="align-middle">{{ category.name }}</td>
+      <td class="align-middle">{{ category.path }}</td>
+      <td class="align-middle "><img class="img" [src]="category.imgPath"></td>
       <td class="align-middle">
         <div class="d-flex flex-column">
-          <button class="btn-action mb-1">Редагувати</button>
-          <button class="btn-action" >Видалити</button>
+          <button class="btn btn-edit" (click)="editCategory(category)">Редагувати</button>
+          <button class="btn btn-delete" (click)="deleteCategory(category)">Видалити</button>
         </div>
       </td>
     </tr>
