--- a/src/app/admin/admin-category/admin-category.component.scss
+++ b/src/app/admin/admin-category/admin-category.component.scss
@@ -10,7 +10,19 @@
   margin-bottom: 20px;
 }
 
+.btn-edit, .btn-delete{
+  height: 100%;
+  font-size: 15px;
+  padding: 10px;
+  width: 150px;
+  margin-bottom: 15px;
 
+}
+.img{
+  width: 100px;
+  height: 100px;
+
+}
 .container-fluid {
   width: 100%;
   padding: 0;
@@ -36,21 +48,9 @@ input {
   border-radius: 5px;
   border: none;
   padding: 15px;
-  font-size: 25px;
+  font-size: 20px;
   width: 360px;
   margin-top: 28px;
-  background-color: $clr-background;
-}
-
-*:focus {
-  border: none;
-  outline: 2px solid $primary;
-}
-
-.description {
-  width: 100%;
-  height: 220px;
-  margin-bottom: 30px;
 }
 
 .blok-fail {
@@ -61,3 +61,8 @@ input {
   margin: 30px 0;
   padding: 10px
 }
+.table-group-divider {
+  text-transform:uppercase;
+font-size: 15px;
+}
+
