--- a/src/app/admin/admin-product/admin-product.component.html
+++ b/src/app/admin/admin-product/admin-product.component.html
@@ -5,31 +5,28 @@
     <form [formGroup]="productForm" (ngSubmit)="addProduct()">
 
       <div class="mb-3">
-        <label  class="form-label fs-4">Виберіть категорію</label>
+        <label class="form-label fs-4">Виберіть категорію</label>
         <select formControlName="category" class="form-select">
-          <option *ngFor="let category of adminProducts"></option>
+          <option [value]="category.path" *ngFor="let category of adminCategories">{{ category.name }}
+          </option>
         </select>
 
         <div class="d-flex justify-content-between">
-          <input class="mr-2" formControlName="name" type="text" name="name" placeholder="*Назва продукту">
-          <input class="mr-2" formControlName="path" type="text" name="path" placeholder="*Шлях">
+          <input class="me-4" formControlName="name" type="text" name="name" placeholder="*Назва продукту">
+          <input formControlName="path" type="text" name="path" placeholder="*Шлях">
         </div>
       </div>
       <textarea class="description" formControlName="description" type="text" name="description"
                 placeholder="*Інгредієнти"></textarea>
       <div class="d-flex justify-content-between">
-        <input class="mr-2" formControlName="weight" type="text" name="weight" placeholder="*Вага">
-        <input class="mr-2" formControlName="price" type="number" name="price" placeholder="*Ціна">
+        <input class="me-4" formControlName="weight" type="text" name="weight" placeholder="*Вага">
+        <input  formControlName="price" type="number" name="price" placeholder="*Ціна">
       </div>
 
       <ng-container *ngIf="!isUploaded">
         <div class="mb-3">
           <label for="formFile" class="form-label"></label>
           <input class="form-control" type="file" id="formFile" (change)="upload($event)">
-        </div>
-        <div class="progress mb-3" role="progressbar" aria-label="Default striped example" aria-valuemin="0"
-             aria-valuemax="100">
-          <div class="progress-bar progress-bar-striped" [style.width.%]="uploadPercent"></div>
         </div>
       </ng-container>
       <ng-container *ngIf="isUploaded">
@@ -39,7 +36,11 @@
         </div>
       </ng-container>
 
-      <div><button type="submit" [disabled]="productForm.invalid" class="btn-save fs-4">{{ editStatus ? 'Зберегти зміни': 'Зберегти' }}</button></div>
+      <div>
+        <button type="submit" [disabled]="productForm.invalid"
+                class="btn-save fs-4">{{ editStatus ? 'Зберегти зміни' : 'Зберегти' }}
+        </button>
+      </div>
 
     </form>
   </div>
@@ -59,19 +60,18 @@
     </thead>
     <tbody class="table-group-divider">
     <tr *ngFor="let product of adminProducts; let i = index">
-      <th class="align-middle"></th>
-      <td class="align-middle"></td>
-      <td class="align-middle"></td>
-      <td class="align-middle"></td>
-      <td class="align-middle"></td>
-      <td class="align-middle"></td>
-      <td class="align-middle"></td>
-      <td class="align-middle">
-        <img>
-      </td>
+      <th class="align-middle">{{ product.id }}</th>
+      <td class="align-middle">{{ product.category }}</td>
+      <td class="align-middle">{{ product.name }}</td>
+      <td class="align-middle">{{ product.path }}</td>
+      <td class="align-middle">{{ product.description | slice:0:14 }}
+        <span *ngIf="product.description.length > 15">...</span></td>
+      <td class="align-middle">{{ product.weight }}</td>
+      <td class="align-middle">{{ product.price }}</td>
+      <td class="align-middle"><img class="img" [src]="product.imgPath" alt="{{product.name}}"></td>
       <td class="align-middle text-center">
-        <button class="btn-action mb-1" (click)="editProduct()">Редагувати</button>
-        <button class="btn-action" (click)="deleteProduct()">Видалити</button>
+        <button class="btn mb-1 btn-small" (click)="editProduct(product)">Редагувати</button>
+        <button class="btn btn-small" (click)="deleteProduct(product)">Видалити</button>
       </td>
     </tr>
     </tbody>
