--- a/src/app/admin/admin-product/admin-product.component.scss
+++ b/src/app/admin/admin-product/admin-product.component.scss
@@ -17,41 +17,30 @@
 
 }
 
-.btn-action {
-  color: white;
-  border: none;
-  background-color: transparent;
-  font-weight: bold;
-  margin: 10px 0;
-
-}
+.btn-small {
+padding: 5px;
+  box-sizing: border-box;
+  width: 120px;}
 
 .add-block {
   width: 60%;
-
 }
 
 input {
   border-radius: 5px;
+  border: none;
   padding: 15px;
-  font-size: 25px;
+  font-size: 20px;
   width: 360px;
-  margin-top: 28px;
-  background-color: $clr-background;
-  border: none;
-}
-
-*:focus {
-  border: none;
-  outline: 2px solid $primary;
+  margin-top: 15px;
 }
 
 .description {
   width: 100%;
-  height: 220px;
-  margin-bottom: 30px;
+  height: 100px;
   background-color: $clr-background;
   border: none;
+  margin-bottom: 0;
 }
 
 .blok-fail {
@@ -61,4 +50,8 @@ input {
   border: 1px solid rgb(189, 188, 188);
   margin: 30px 0px;
   padding: 10px
+}
+.img{
+  width: 100px;
+  height: 100px;
 }
