--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,5 +9,5 @@
       <router-outlet></router-outlet>
     </div>
   </div>
-  <button class="btn btn-exit" (click)="logout()">Log out</button>
+  <button class="btn btn-exit mb-5" (click)="logout()">Log out</button>
 </div>
