--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,11 +1,6 @@
-
 @import '../../shared/styles/variables';
 @import '../../shared/styles/base';
 /* Скидання початкових стилів браузера */
-h1, h2, h3, p, ul, li {
-  margin: 0; /* Прибираємо всі зовнішні відступи */
-  padding: 0; /* Прибираємо додаткові внутрішні відступи, якщо є */
-}
 
 /* Основний контейнер */
 .container {
@@ -21,9 +16,19 @@ h1, h2, h3, p, ul, li {
   margin: 60px 0;
 }
 
-h1, h2, h3 {
-  font-weight: 600;
+h1, h2, h3{
   line-height: 1.5;
+}
+h2{
+  font-weight:400 ;
+}
+h1{
+  font-size: 46px;
+  font-weight: 400
+}
+h3 {
+  font-size: 34px;
+  font-weight: 500
 }
 
 /* Абзаци */
